--- a/static/about_Version3.html
+++ b/static/about_Version3.html
@@ -5,6 +5,10 @@
     <meta name="description" content="About Gorilla Camping - Guerilla-style camping guides, gear reviews, and off-grid living tips for budget-conscious adventurers.">
     <meta name="keywords" content="guerilla camping, off-grid living, camping gear reviews, about, blog, budget camping, DIY camping, veteran camping">
     <link rel="stylesheet" href="/css/guerilla.css">
+    <!-- Configuration and Core Scripts -->
+<script src="/js/config.js"></script>
+<script src="/js/analytics.js"></script>
+<script src="/js/preload.js"></script>
 </head>
 <body>
 <section class="about-section">
