--- a/static/about_Version3.html
+++ b/static/about_Version3.html
@@ -113,4 +113,6 @@
   <a href="https://gum.co/yourlink" class="cta-button">GET INSTANT ACCESS</a>
 </div>
 </body>
+    <!-- Guerilla Chat Integration -->
+<script src="/js/guerilla-chat.js"></script>
 </html>
