--- a/static/affiliate.html
+++ b/static/affiliate.html
@@ -35,6 +35,10 @@
         .subtitle { max-width: 500px; margin: 0 auto; }
     </style>
     <script src="/js/config.js"></script>
+<!-- Configuration and Core Scripts -->
+<script src="/js/config.js"></script>
+<script src="/js/analytics.js"></script>
+<script src="/js/preload.js"></script>
 </head>
 <body>
     <h1>Finding You the Best Deal...</h1>
@@ -64,4 +68,6 @@
         });
     </script>
 </body>
+    <!-- Guerilla Chat Integration -->
+<script src="/js/guerilla-chat.js"></script>
 </html>
