--- a/static/blog.html
+++ b/static/blog.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Configuration and Core Scripts -->
+<script src="/js/config.js"></script>
+<script src="/js/analytics.js"></script>
+<script src="/js/preload.js"></script>
     <!-- Meta tags, CSS links, etc. -->
     <script src="/js/config.js"></script>
 </head>
@@ -54,4 +58,6 @@
     });
     </script>
 </body>
+    <!-- Guerilla Chat Integration -->
+<script src="/js/guerilla-chat.js"></script>
 </html>
