--- a/static/blog_Version4.html
+++ b/static/blog_Version4.html
@@ -5,6 +5,10 @@
     <meta name="description" content="Discover the latest guerilla-style camping tips, gear reviews, and adventure stories on the Gorilla Camping blog.">
     <meta name="keywords" content="Gorilla Camping Blog, Guerilla Camping, Outdoor Adventures, Camping Tips, Gear Reviews">
     <link rel="stylesheet" href="/css/guerilla.css">
+<!-- Configuration and Core Scripts -->
+<script src="/js/config.js"></script>
+<script src="/js/analytics.js"></script>
+<script src="/js/preload.js"></script>
 </head>
 <body>
 <section class="blog-section">
@@ -34,4 +38,6 @@ fetch('https://gorillacamping.site/api/blog-posts')
   });
 </script>
 </body>
+    <!-- Guerilla Chat Integration -->
+<script src="/js/guerilla-chat.js"></script>
 </html>
