--- a/static/contact_Version3.html
+++ b/static/contact_Version3.html
@@ -4,6 +4,10 @@
     <title>Contact - Gorilla Camping</title>
     <meta name="description" content="Contact Gorilla Camping for gear reviews, collaborations, and guerilla camping advice. Get in touch guerilla-style!">
     <link rel="stylesheet" href="/css/guerilla.css">
+    <!-- Configuration and Core Scripts -->
+<script src="/js/config.js"></script>
+<script src="/js/analytics.js"></script>
+<script src="/js/preload.js"></script>
 </head>
 <body>
 <div class="container">
@@ -56,4 +60,6 @@ document.getElementById('contact-form').onsubmit = async function(e) {
 };
 </script>
 </body>
+    <!-- Guerilla Chat Integration -->
+<script src="/js/guerilla-chat.js"></script>
 </html>
