--- a/static/gear.html
+++ b/static/gear.html
@@ -3,6 +3,10 @@
 <head>
     <!-- Meta tags, title, etc. -->
     <script src="/js/config.js"></script>
+    <!-- Configuration and Core Scripts -->
+<script src="/js/config.js"></script>
+<script src="/js/analytics.js"></script>
+<script src="/js/preload.js"></script>
 </head>
 <body>
     <!-- Header, navigation, etc. -->
@@ -86,5 +90,7 @@
         return true; // Allow the link to continue
     }
     </script>
+    <!-- Guerilla Chat Integration -->
+<script src="/js/guerilla-chat.js"></script>
 </body>
 </html>
