--- a/static/index_Version3.html
+++ b/static/index_Version3.html
@@ -5,6 +5,10 @@
     <meta name="description" content="Gorilla Camping - Guerilla-style camping guides, gear reviews, and off-grid living tips for budget-conscious adventurers.">
     <meta name="keywords" content="guerilla camping, off-grid living, camping gear reviews, budget camping, DIY camping, veteran camping">
     <link rel="stylesheet" href="/css/guerilla.css">
+    <!-- Configuration and Core Scripts -->
+<script src="/js/config.js"></script>
+<script src="/js/analytics.js"></script>
+<script src="/js/preload.js"></script>
 </head>
 <body>
 <div class="home-container">
@@ -126,5 +130,7 @@
         }
     </style>
 </div>
+    <!-- Guerilla Chat Integration -->
+<script src="/js/guerilla-chat.js"></script>
 </body>
 </html>
