--- a/static/post.html
+++ b/static/post.html
@@ -3,6 +3,10 @@
 <head>
     <!-- Meta tags, title, etc. -->
     <script src="/js/config.js"></script>
+   <!-- Configuration and Core Scripts -->
+<script src="/js/config.js"></script>
+<script src="/js/analytics.js"></script>
+<script src="/js/preload.js"></script> 
 </head>
 <body>
     <!-- Header, navigation, etc. -->
@@ -47,5 +51,7 @@
             });
     });
     </script>
+    <!-- Guerilla Chat Integration -->
+<script src="/js/guerilla-chat.js"></script>
 </body>
 </html>
